--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ vercel好像没有这个版本，一直弄不成。
 <section class=entry-content>
 <p>今天周六，照例是要回老家转一圈的，看看爸妈。
 今天算是回的比较早的一次，一般会去都快中午了，今天11点左右到家。
-到家后，妈妈在蒸馍，熟悉的一幕。
+到家后，妈妈在蒸馍，熟悉的一幕幕。
 大大的锅头，冒着浓稠的热气混着柴火产生的烟，妈妈在锅头旁烧着火。
 看到我们回来，就说昨天刚做的烙饼，在电饼铛里热下就可以吃了。
 感觉我们回家，老妈的任务就是做饭，不管我们啥几点回去都是给我们做饭。
