Update chenggong.md 2736b47350ede137f0a1779c8deed3f50d4f7ad0

--- a/index.html
+++ b/index.html
@@ -94,7 +94,8 @@
 <p>主题换成了PaperMod，这个主题对hugo版本有要求，必须得0.82.0以上。
 vercel好像没有这个版本，一直弄不成。
 先这样吧。
-这篇文章也是个测试。</p>
+这篇文章也是个测试。
+域名又出现问题了吗？</p>
 </section>
 <footer class=entry-footer><span title="2021-11-25 00:01:21 +0800 +0800">November 25, 2021</span>&nbsp;·&nbsp;1 分钟&nbsp;·&nbsp;MagicQ</footer>
 <a class=entry-link aria-label="post link to 终于换主题成功" href=https://i.ziyue.de/posts/chenggong/></a>
