Update huijia20211120.md a0984ffc2636a9abf10dd6368a7062811e021217

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ vercel好像没有这个版本，一直弄不成。
 </h2>
 </header>
 <section class=entry-content>
-<p>今天周六，照例是要回老家转一圈的，看看爸妈 。
+<p>今天周六，照例是要回老家转一圈的，看看爸爸妈妈 。
 今天算是回的比较早的一次，一般会去都快中午了，今天11点左右到家。
 到家后，妈妈在蒸馍，熟悉的一幕一幕。
 大大的锅头，冒着浓稠的热气混着柴火产生的烟，妈妈在锅头旁烧着火。
