--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <meta name=author content="MagicQ">
 <link rel=canonical href=https://i.ziyue.de/>
 <link crossorigin=anonymous href=/assets/css/stylesheet.min.c88963fe2d79462000fd0fb1b3737783c32855d340583e4523343f8735c787f0.css integrity="sha256-yIlj/i15RiAA/Q+xs3N3g8MoVdNAWD5FIzQ/hzXHh/A=" rel="preload stylesheet" as=style>
-<link rel=icon href=https://i.ziyue.de/%3Clink/favicon.ico%3E>
-<link rel=icon type=image/png sizes=16x16 href=https://i.ziyue.de/%3Clink/favicon.ico%3E>
+<link rel=icon href=https://i.ziyue.de/favicon.ico>
+<link rel=icon type=image/png sizes=16x16 href=https://i.ziyue.de/favicon.ico>
 <link rel=icon type=image/png sizes=32x32 href=https://i.ziyue.de/%3Clink/favicon.ico%3E>
 <link rel=apple-touch-icon href=https://i.ziyue.de/%3Clink/%20abs%20url%3E>
 <link rel=mask-icon href=https://i.ziyue.de/%3Clink/%20abs%20url%3E>
@@ -29,7 +29,7 @@
 <meta name=twitter:card content="summary">
 <meta name=twitter:title content="子曰">
 <meta name=twitter:description content="学而时习之，不亦说乎。">
-<script type=application/ld+json>{"@context":"https://schema.org","@type":"Organization","name":"子曰","url":"https://i.ziyue.de/","description":"学而时习之，不亦说乎。","thumbnailUrl":"https://i.ziyue.de/%3Clink/favicon.ico%3E","sameAs":["https://twitter.com/","https://stackoverflow.com","https://github.com/"]}</script>
+<script type=application/ld+json>{"@context":"https://schema.org","@type":"Organization","name":"子曰","url":"https://i.ziyue.de/","description":"学而时习之，不亦说乎。","thumbnailUrl":"https://i.ziyue.de/favicon.ico","sameAs":["https://twitter.com/","https://stackoverflow.com","https://github.com/"]}</script>
 </head>
 <body class=list id=top>
 <script>localStorage.getItem("pref-theme")==="dark"?document.body.classList.add('dark'):localStorage.getItem("pref-theme")==="light"?document.body.classList.remove('dark'):window.matchMedia('(prefers-color-scheme: dark)').matches&&document.body.classList.add('dark')</script>
