--- a/search/index.html
+++ b/search/index.html
@@ -12,7 +12,7 @@
 <script defer crossorigin=anonymous src=/assets/js/search.min.6a9a7eb2e837edc2f9236bb0c733bf12998c2a01b7c92054b7fbdda7370a68b9.js integrity="sha256-app+sug37cL5I2uwxzO/EpmMKgG3ySBUt/vdpzcKaLk="></script>
 <link rel=icon href=https://i.ziyue.de/favicon.ico>
 <link rel=icon type=image/png sizes=16x16 href=https://i.ziyue.de/favicon.ico>
-<link rel=icon type=image/png sizes=32x32 href=https://i.ziyue.de/%3Clink/favicon.ico%3E>
+<link rel=icon type=image/png sizes=32x32 href=https://i.ziyue.de/favicon.ico>
 <link rel=apple-touch-icon href=https://i.ziyue.de/%3Clink/%20abs%20url%3E>
 <link rel=mask-icon href=https://i.ziyue.de/%3Clink/%20abs%20url%3E>
 <meta name=theme-color content="#2e2e33">
