--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 <main class=main>
 <article class="first-entry home-info">
 <header class=entry-header>
-<h1>Hello World 👋</h1>
+<h1>Hello World! 👋</h1>
 </header>
 <section class=entry-content>
 <p>Welcome to my blog 。</p>
