Update config.yml 82d6fc333cde5290bd78bfb6f4aac8f2c241ef83

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 <h1>Hello World! 👋</h1>
 </header>
 <section class=entry-content>
-<p></p>
+<p>Welcome to my blog 。</p>
 </section>
 <footer class=entry-footer>
 <div class=social-icons>
