Update config.yml 1241e8dee608bf3d9da1e16ea803bc75add8c7fa

--- a/index.html
+++ b/index.html
@@ -64,10 +64,13 @@
 <main class=main>
 <article class="first-entry home-info">
 <header class=entry-header>
-<h1>Hello World! 👋</h1>
+<h1>Hello World 👋</h1>
 </header>
 <section class=entry-content>
-<p>Welcome to my blog 。</p>
+<p><p>江南可采莲，莲叶何田田。</p>
+<p>鱼戏莲叶间。</p>
+<p>鱼戏莲叶东，鱼戏莲叶西，鱼戏莲叶南，鱼戏莲叶北。</p>
+</p>
 </section>
 <footer class=entry-footer>
 <div class=social-icons>
