--- a/index.html
+++ b/index.html
@@ -85,6 +85,29 @@
 </article>
 <article class=post-entry>
 <header class=entry-header>
+<h2>悠闲一天
+</h2>
+</header>
+<section class=entry-content>
+<p>打球 昨天把一个汇报材料写完了，今天暂时没有什么事，爽歪歪。
+看看抖音、刷刷网页、摸摸鱼。
+一看表，这不10点了吧，该活动活动了。叫上好基友，上楼打球。
+可谁知打个球这么难，有活动室钥匙的这几个人，今天都不在，想起还有一个人，去找，还好他在，顺利拿到钥匙。
+忽然就觉得得配一把钥匙，省的以后想打球了还得找人要钥匙，找不到人的话还就打不上球了。
+和好基友舒舒服服地打了1个小时，浑身湿透，感觉很舒服。
+中午吃完饭，转悠着去找配钥匙的地方，找到了，配了两把，以后想打球了就上楼打，不用再找别人了。
+上厕所 我路过时你在打电话。
+我到厕所了你还在打电话，只是移步到了厕所门口。
+喝了两杯水的生成的尿，哗啦啦地放了。
+只是肚子里的空气委屈了。
+想肆无忌惮地放吧，你在门口，我不好意思，一是害怕你听见，二是害怕跟你打电话的人听见。
+算了，委屈下我把。</p>
+</section>
+<footer class=entry-footer><span title="2021-12-08 20:47:13 +0800 +0800">December 8, 2021</span>&nbsp;·&nbsp;1 分钟&nbsp;·&nbsp;MagicQ</footer>
+<a class=entry-link aria-label="post link to 悠闲一天" href=https://i.ziyue.de/posts/2021-12-08/></a>
+</article>
+<article class=post-entry>
+<header class=entry-header>
 <h2>突然好安静
 </h2>
 </header>
@@ -245,42 +268,6 @@ gh-pages</p>
 </section>
 <footer class=entry-footer><span title="2021-11-19 22:34:38 +0800 +0800">November 19, 2021</span>&nbsp;·&nbsp;1 分钟&nbsp;·&nbsp;MagicQ</footer>
 <a class=entry-link aria-label="post link to 怪不得域名一直掉" href=https://i.ziyue.de/posts/yumingdiao/></a>
-</article>
-<article class=post-entry>
-<header class=entry-header>
-<h2>祝你长生不老
-</h2>
-</header>
-<section class=entry-content>
-<p>吃完饭，习惯性看抖音，刷到了个“月亮”。
-为什么会直播“月亮”？原来今天有月食。
-就对小优说，走，出去看月亮去，今晚有月食。
-小优欢喜答应，赶紧穿衣、穿鞋。
-临出门前，小优问我，今晚对着月亮许愿能实现吗？
-我说可以，她说那我一会要对着月亮许个愿。
-妈妈，爸爸说今晚对着月亮许愿可以实现的。
-我们牵着蹦蹦，到河边看月亮。
-小优问我，你刚才许的什么愿？
-我说，我希望你可以永远健康、快乐。
-她笑了。问我，你猜我许的什么愿？
-我说，你许的是以后更漂亮，更高？她说不对。
-我说，那是什么？
-她说，我许的愿望是“希望爸爸长生不老”，我笑了，摸摸她的帽子。
-她又问我，你许的第二个愿望是什么？
-我说，我希望家人都健康。
-你许的什么愿望，我问。
-她说，我希望爸爸能更爱我。我又笑了，再次充满爱意地摸摸她衣服后面的帽子。
-今天是我俩出来散步，她妈妈没有来，这样的情况不多，但是感觉还挺不错。
-我们聊了很多，她说她同学给她说男厕所有鬼。
-我说，他们逗你玩呢，世界上是没有鬼的。
-她说，那我们那天听到了4声“呼呼”的声音，是从4楼传过来的。
-还说她看见树叶没有动，说明没有风，那4声“呼呼”不是刮风。
-问我到底是什么？
-我说，我也不确定是什么，但是可以确定的是肯定不是鬼。
-一路上聊了很多，以后有机会，多多陪她。</p>
-</section>
-<footer class=entry-footer><span title="2021-11-19 22:02:38 +0800 +0800">November 19, 2021</span>&nbsp;·&nbsp;1 分钟&nbsp;·&nbsp;MagicQ</footer>
-<a class=entry-link aria-label="post link to 祝你长生不老" href=https://i.ziyue.de/posts/zhubababulao/></a>
 </article>
 <footer class=page-footer>
 <nav class=pagination>
