Update config.yml 06f229cab7961efca93b9eec9827c88e38b5e08c

--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
 <h1>Hello World 👋</h1>
 </header>
 <section class=entry-content>
-<p><p>江南可采莲，莲叶何田田。</p>
-<p>鱼戏莲叶间。</p>
-<p>鱼戏莲叶东，鱼戏莲叶西，鱼戏莲叶南，鱼戏莲叶北。</p>
+<p><p>我们总是把幸福人生解读为：“有”,有房子、有车、有钱、有权，</p>
+<p>可我们却不知道幸福其实是“无”，无忧、无虑、无病、无灾。</p>
+<p>因为“有”多半是给别人看的，只有“无”才是你自己的。</p>
 </p>
 </section>
 <footer class=entry-footer>
