Update config.yml f929968da494a1f289b770f4d79dc7110e454711

--- a/search/index.html
+++ b/search/index.html
@@ -59,6 +59,11 @@
 <span class=active>搜索</span>
 </a>
 </li>
+<li>
+<a href=https://i.ziyue.de/links/ title=链接>
+<span>链接</span>
+</a>
+</li>
 </ul>
 </nav>
 </header>
