Update config.yml 7f28af98992b707abc605266a7d0493e117bb07c

--- a/links/index.html
+++ b/links/index.html
@@ -73,7 +73,7 @@
 <h1 class=post-title>
 链接
 </h1>
-<div class=post-meta>1 分钟&nbsp;·&nbsp;MagicQ
+<div class=post-meta>MagicQ
 </div>
 </header>
 <div class=post-content><p><a href=http://www.auiou.com/>王志勇Blog</a>
