Update config.yml c033d53a28e0130a12ff4e5883391b759af2b17e

--- a/404.html
+++ b/404.html
@@ -6,7 +6,7 @@
 <title>404 Page not found - 子曰</title>
 <meta name=keywords content>
 <meta name=description content="学而时习之，不亦说乎。">
-<meta name=author content="MagicQ">
+<meta name=author content>
 <link rel=canonical href=https://i.ziyue.de/404.html>
 <link crossorigin=anonymous href=/assets/css/stylesheet.min.cfb3dc2519a0971c1d5d36aead0c1668083ea5cfeed883d7afe1ee5a2297eb4c.css integrity="sha256-z7PcJRmglxwdXTaurQwWaAg+pc/u2IPXr+HuWiKX60w=" rel="preload stylesheet" as=style>
 <link rel=icon href=https://i.ziyue.de/favicon.ico>
