--- a/index.html
+++ b/index.html
@@ -90,6 +90,29 @@
 </article>
 <article class=post-entry>
 <header class=entry-header>
+<h2>同事聚餐
+</h2>
+</header>
+<section class=entry-content>
+<p>今天是2021年的最后一天，明天就是新年了，2022年了，放假3天。
+所以很多人今天都没有心思上班，特别是今天下午，都在那扣着手机等下班呢。
+谁成想有些部门是真的恶心，今天发通知，上班第一天就要结果。
+要让我们的元旦3天假泡汤吗？MLGB，成天不干正事。
+还好我们效率好，下班后加了半个小时班把东西准备的差不多了。
+话说很久没有和同事一块吃饭了。
+今天周同学下午给我打电话，说晚上一块吃饭，挺好，必须参加。
+其实也不是全部人，就关系好的这几个。
+吃的海底捞，马哥有黑海会员，在我跟前吹牛逼吹了半天。
+吃着、聊着、很开心。
+吃着、聊着、吃撑了。
+这会还是肚子有点撑，哎。
+新的一年了，祝大家心想事成、万事顺遂。</p>
+</section>
+<footer class=entry-footer><span title="2021-12-31 22:32:26 +0800 +0800">December 31, 2021</span>&nbsp;·&nbsp;MagicQ</footer>
+<a class=entry-link aria-label="post link to 同事聚餐" href=https://i.ziyue.de/posts/2021-12-31/></a>
+</article>
+<article class=post-entry>
+<header class=entry-header>
 <h2>疫情值班
 </h2>
 </header>
@@ -261,23 +284,6 @@
 </section>
 <footer class=entry-footer><span title="2021-12-02 21:06:13 +0800 +0800">December 2, 2021</span>&nbsp;·&nbsp;MagicQ</footer>
 <a class=entry-link aria-label="post link to 突然好安静" href=https://i.ziyue.de/posts/2021-12-2/></a>
-</article>
-<article class=post-entry>
-<header class=entry-header>
-<h2>发过脾气就后悔
-</h2>
-</header>
-<section class=entry-content>
-<p>网上有一句话是怎么说的？
-发脾气之前先数20下还是10下的，这样我们就会理智很多，会做更好的判断。
-刚才没有忍住，又对着小优发脾气了，扔了她刚买回来的两个造型巧克力。
-这才过了有半个小时吧，就觉得有点后悔。
-在她的学习方面，我以后得尽量慢声细语，我得尽量理解她，但是一看到她变”木头“，我的火气蹭一下就上来了。
-以后尽量改改吧。
-毕竟她还有很多方面挺可爱的。</p>
-</section>
-<footer class=entry-footer><span title="2021-11-30 20:22:11 +0800 +0800">November 30, 2021</span>&nbsp;·&nbsp;MagicQ</footer>
-<a class=entry-link aria-label="post link to 发过脾气就后悔" href=https://i.ziyue.de/posts/shengqi/></a>
 </article>
 <footer class=page-footer>
 <nav class=pagination>
