--- a/index.html
+++ b/index.html
@@ -84,6 +84,20 @@
 </article>
 <article class=post-entry>
 <header class=entry-header>
+<h2>github不能自动部署了
+</h2>
+</header>
+<section class=entry-content>
+<p>好久没有更新博客了，前几天更新发现github不能自动部署了。
+昨天研究了一天，发现好像是有个地方不对劲。
+就是ubuntu版本好像不对，改成最新的就可以了。
+应该是这个问题，在此记录一下。</p>
+</section>
+<footer class=entry-footer><span title="2023-04-20 20:33:48 +0800 +0800">April 20, 2023</span>&nbsp;·&nbsp;MagicQ</footer>
+<a class=entry-link aria-label="post link to github不能自动部署了" href=https://i.bairuicc.com/posts/20230421/></a>
+</article>
+<article class=post-entry>
+<header class=entry-header>
 <h2>A+ 折腾网站
 </h2>
 </header>
@@ -270,21 +284,6 @@ define('FORCE_SSL_ADMIN', true);
 </section>
 <footer class=entry-footer><span title="2022-04-27 15:07:42 +0800 +0800">April 27, 2022</span>&nbsp;·&nbsp;MagicQ</footer>
 <a class=entry-link aria-label="post link to 2022-04-27" href=https://i.bairuicc.com/posts/2022-04-27/></a>
-</article>
-<article class=post-entry>
-<header class=entry-header>
-<h2>原来已经快过年了
-</h2>
-</header>
-<section class=entry-content>
-<p>原来今天都2022年1月20日了，总感觉1月份才刚开始，离过年还远，写这篇文章时才注意到今天已经20号了，离过年也就10天了。
-春节是中国最大的传统节日，但是现在一点节日的气氛也没有，不是要弘扬中国传统文化吗？春节的节日气氛烘托起来呀，圣诞节说是外国节日不让过，那你倒是好好过过你的传统节日啊。
-昨天小优放假了，昨天下午就跟着奶奶回老家了，在监控中看到他们回家，还挺舍不得的，下午下班回到家，觉得家里好冷清。
-刚下班回来，跟小优视频了，问她在家里冷吗？她说不冷，那就好，这几天降温了，有雨雪，她不冷就好。想她。
-单位的事，应付着吧，不只是我自己的问题还是什么，感觉做的好多事都好形式、毫无意义，为群众办点实事吧，成天就知道折腾单位这些人，这么冷的天，去山区检查督导，一个个手插兜里，眼睛一看工作就干了吗？</p>
-</section>
-<footer class=entry-footer><span title="2022-01-20 19:39:07 +0800 +0800">January 20, 2022</span>&nbsp;·&nbsp;MagicQ</footer>
-<a class=entry-link aria-label="post link to 原来已经快过年了" href=https://i.bairuicc.com/posts/2022-01-20/></a>
 </article>
 <footer class=page-footer>
 <nav class=pagination>
