--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 3.WP-PageNavi 设置分页。
 4.WPJAM BASIC 用来优化网站，加速网站运行。
 下面是一些代码实现的功能：
-1、只搜索标题
+一、只搜索标题
 add_filter( 'posts_search', '_search_by_title', 10, 2 ); function _search_by_title( $search, $wp_query ) { if ( ! empty( $search ) && ! empty( $wp_query->query_vars['search_terms'] ) ) { global $wpdb; $q = $wp_query->query_vars; $n = ! empty( $q['exact'] ) ? '' : '%'; $search = array(); foreach ( ( array ) $q['search_terms'] as $term ) $search[] = $wpdb->prepare( "$wpdb->posts....</p>
 </section>
 <footer class=entry-footer><span title="2023-06-09 20:33:48 +0800 +0800">June 9, 2023</span>&nbsp;·&nbsp;MagicQ</footer>
