Update links.md 40d27cac44c43a17a9f39d1ce2bff956ff9f494f

--- a/links/index.html
+++ b/links/index.html
@@ -82,39 +82,39 @@
 <div class=post-content><table>
 <thead>
 <tr>
+<th style=text-align:left></th>
 <th style=text-align:center></th>
 <th style=text-align:center></th>
-<th style=text-align:center></th>
-<th style=text-align:center></th>
+<th style=text-align:right></th>
 </tr>
 </thead>
 <tbody>
 <tr>
-<td style=text-align:center><a href=http://www.auiou.com/>王志勇Blog</a></td>
+<td style=text-align:left><a href=http://www.auiou.com/>王志勇Blog</a></td>
 <td style=text-align:center><a href=https://tumutanzi.com/>土木坛子</a></td>
 <td style=text-align:center><a href=https://immmmm.com/>木木木木木</a></td>
-<td style=text-align:center><a href=https://husay.cc/>胡言胡语</a></td>
+<td style=text-align:right><a href=https://husay.cc/>胡言胡语</a></td>
 </tr>
 <tr>
-<td style=text-align:center><a href=https://edui.fun/>教学工具导航</a></td>
+<td style=text-align:left><a href=https://edui.fun/>教学工具导航</a></td>
 <td style=text-align:center><a href=https://dusays.com/>杜老师说</a></td>
 <td style=text-align:center><a href=https://kaix.in/>kaix.in</a></td>
-<td style=text-align:center><a href=https://www.duanxiansen.com/>三无青年</a></td>
+<td style=text-align:right><a href=https://www.duanxiansen.com/>三无青年</a></td>
 </tr>
 <tr>
-<td style=text-align:center><a href=https://zhou.ge/>忆往事</a></td>
+<td style=text-align:left><a href=https://zhou.ge/>忆往事</a></td>
 <td style=text-align:center><a href=http://forbetty.com/>BETTYPLEX</a></td>
 <td style=text-align:center><a href=https://jubeny.com/>渚碧</a></td>
-<td style=text-align:center><a href=http://h4ck.org.cn/>美女爬虫</a></td>
+<td style=text-align:right><a href=http://h4ck.org.cn/>美女爬虫</a></td>
 </tr>
 <tr>
-<td style=text-align:center><a href=https://wuse.ink/>无色墨水</a></td>
+<td style=text-align:left><a href=https://wuse.ink/>无色墨水</a></td>
 <td style=text-align:center><a href=https://www.weisay.com/>威言威语</a></td>
 <td style=text-align:center><a href=https://www.duanxiansen.com/>段先森</a></td>
-<td style=text-align:center><a href=https://onojyun.com/>莫比乌斯</a></td>
+<td style=text-align:right><a href=https://onojyun.com/>莫比乌斯</a></td>
 </tr>
 <tr>
-<td style=text-align:center><a href=https://csguide.cn/>编程指北</a></td>
+<td style=text-align:left><a href=https://csguide.cn/>编程指北</a></td>
 <td style=text-align:center><a href=https://qq.md/>叶开</a></td>
 <td></td>
 <td></td>
