--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 早上到单位，她又邀我一块王者，这么有默契的吗？
 不如找个机会来一炮。</p>
 </section>
-<footer class=entry-footer><span title="2025-07-08 00:06:13 +0800 +0800">July 8, 2025</span>&nbsp;·&nbsp;1 分钟&nbsp;·&nbsp;MagicQ</footer>
+<footer class=entry-footer><span title="2025-07-08 00:06:13 +0800 +0800">July 8, 2025</span>&nbsp;·&nbsp;1 分钟&nbsp;·&nbsp;Me</footer>
 <a class=entry-link aria-label="post link to 20250708" href=https://aabb.qzz.io/posts/20250708/></a>
 </article>
 <article class=post-entry>
