Update 20250730.md 4b114a3213f61089a0ad4866b34d133e5041e847

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 </h2>
 </header>
 <section class=entry-content>
-<p>微信windows PC 各版本下载地址: https://github.com/tom-snow/wechat-windows-versions/releases 微信windowsPCx86各版本下载地址： https://github.com/tom-snow/wechat-windows-versions-x86/releases 微信android各版本下载地址: https://github.com/DJB-Developer/wechat- androidQ -history-versions/releases 微信MAC各版本下载地址： https://github.com/zsbai/wechat-versions/releases 打开网页后，找到对应的版本，点开Assets，下载对应的版本即可.</p>
+<p>微信windows PC 各版本下载地址: https://github.com/tom-snow/wechat-windows-versions/releases 微信windowsPCx86各版本下载地址： https://github.com/tom-snow/wechat-windows-versions-x86/releases 微信android各版本下载地址: https://github.com/DJB-Developer/wechat- androidQ -history-versions/releases 微信MAC各版本下载地址： https://github.com/zsbai/wechat-versions/releases 打开网页后，找到对应的版本，点开Assets，下载对应的版本即可.00</p>
 </section>
 <footer class=entry-footer><span title="2025-07-30 00:06:13 +0800 +0800">July 30, 2025</span>&nbsp;·&nbsp;1 分钟&nbsp;·&nbsp;Me</footer>
 <a class=entry-link aria-label="post link to 微信历史版本下载" href=https://yy.sld.tw/posts/20250730/></a>
