--- a/index.html
+++ b/index.html
@@ -84,6 +84,27 @@
 </article>
 <article class=post-entry>
 <header class=entry-header>
+<h2>20251106
+</h2>
+</header>
+<section class=entry-content>
+<p>今年夏天的时候，燃气公司的人来了。
+说的挺好，我们来检查燃气，看看有没有燃气泄漏，保证你们安全使用。
+胡乱测了两个地方，说不漏气。
+然后拍照，记录燃气表什么的。
+最后走的时候给我来一句，你这得装个安全阀，如果不装的话每月限气5方。
+我说5方差不多了吧，她说5方肯定不能够。
+临走我来挺感谢人家的。
+最后才反应过来，人家过来主要目的就是让装安全阀。
+网上搜了下，说装了安全阀燃气用的就比较多，比较快了。
+我也挺纳闷的，安全阀应该装在主管道上，为什么让装在燃气灶这路。
+狗屁玩意，入室抢劫。</p>
+</section>
+<footer class=entry-footer><span title="2025-11-06 00:06:13 +0800 +0800">November 6, 2025</span>&nbsp;·&nbsp;1 分钟&nbsp;·&nbsp;Me</footer>
+<a class=entry-link aria-label="post link to 20251106" href=https://gs.ye.gs/posts/20251106/></a>
+</article>
+<article class=post-entry>
+<header class=entry-header>
 <h2>hugo部署到虚拟主机
 </h2>
 </header>
@@ -173,34 +194,6 @@ https://github.com/zsbai/wechat-versions/releases
 </section>
 <footer class=entry-footer><span title="2025-07-28 00:06:13 +0800 +0800">July 28, 2025</span>&nbsp;·&nbsp;1 分钟&nbsp;·&nbsp;Me</footer>
 <a class=entry-link aria-label="post link to 快速下载百度云文件" href=https://gs.ye.gs/posts/20250728/></a>
-</article>
-<article class=post-entry>
-<header class=entry-header>
-<h2>20250708
-</h2>
-</header>
-<section class=entry-content>
-<p>记不清我们俩从哪逃离了人群，走到了无人问津的楼梯口。
-我们像热恋中的情侣，相互挽着胳膊。
-我轻声说了声，让我亲你一下。
-可能是我声音太小，我们慌着下楼梯，她没有听见。
-只管挽着我的胳膊继续下楼。
-最终下到的地方好像是一个商场，卖各种衣服、饰品的那种地方。
-里面人好多、好乱、好杂。
-像我这种路痴是很容易在这里面迷路的。
-果不其然，不记得我是出去干了什么，回来就看不见她了。
-凭着感觉找去，找到了。
-她坐在一张桌子上，仰躺着，我可以看到她的内裤边。
-我说走吧，她说我中午不回去了。
-我说，那我中午也不回去了，那我们去哪？
-她低声说，找个青年旅馆吧。
-我大喜，终于有机会了。
-梦醒。
-早上到单位，她又邀我一块王者，这么有默契的吗？
-不如找个机会来一炮。</p>
-</section>
-<footer class=entry-footer><span title="2025-07-08 00:06:13 +0800 +0800">July 8, 2025</span>&nbsp;·&nbsp;1 分钟&nbsp;·&nbsp;Me</footer>
-<a class=entry-link aria-label="post link to 20250708" href=https://gs.ye.gs/posts/20250708/></a>
 </article>
 <footer class=page-footer>
 <nav class=pagination>
