Update 20251113.md c0640196de9332056e468e239200a6f826361b48

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 </h2>
 </header>
 <section class=entry-content>
-<p>测试ftp是否正常</p>
+<p>测试ftp是否正常???</p>
 </section>
 <footer class=entry-footer><span title="2025-11-13 10:32:46 +0800 +0800">November 13, 2025</span>&nbsp;·&nbsp;1 分钟&nbsp;·&nbsp;Me</footer>
 <a class=entry-link aria-label="post link to 20251113" href=https://gs.ye.gs/posts/20251113/></a>
